--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <!-- Style includes go here -->
-</head>
+<html>
+<meta charset="utf-8">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <body>
   <h1>Photo Gallery</h1>
   <form action="gallery.php" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="FILE_SIZE" value="100000000000000">
-    <table>
-      <tbody>
-      <tr>
-        <td>Photo Name</td>
-        <td><input type="text" name="photoName"></td>
-      </tr>
-      <tr>
-        <td>Date</td>
-        <td><input type="text" name="photoDate"></td>
-      </tr>
-      <tr>
-        <td>Photographer</td>
-        <td><input type="text" name="photoPhotographer"></td>
-      </tr>
-      <tr>
-        <td>Location</td>
-        <td><input type="text" name="photoLocation"></td>
-      </tr>
-      <tr>
-        <td class="cell-text">Select image to upload: </td>
-        <td><input type="file" name="fileUpload" id="fileUpload"></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td><input type="submit" name="submit"> </td>
-      </tr>
-      </tbody>
-    </table>
+    <section>
+      <div class="d-flex justify-content-start">
+        <div class="span5">
+          <div class="control-group">
+            <label class="control-label">Photo Name:</label>
+            <div class="controls">
+              <input type="text" name=photoName placeholder=Mark>
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Date taken:</lable>
+              <div class="controls">
+                <input class="text" name=photoDate placeholder=2021>
+              </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Photographer:</lable>
+              <div class="controls">
+                <input class="text" name=photoPhotographer placeholder=Markhauchwitz>
+              </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Location:</lable>
+              <div class="controls">
+                <input class="text" name=photoLocation placeholder=Fullerton>
+              </div>
+          </div>
+        </div>
+      </div>
+      <input type="file" name="fileToUpload" id="fileToUpload">
+      <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+    </section>
   </form>
 </body>
+
 </html>
